(related to bug 2093) Many small refactoring changes
git-svn-id: file:///tmp/svnroot_only_rec/internal/rec-project/rec/trunk@8227 8c4c7310-a39f-45c4-bd0d-b10b2e5d99a4